Final sketches for EPSC-DPS 2025 Poster

--- a/rover_and_orbiter.tex
+++ b/rover_and_orbiter.tex
@@ -46,7 +46,7 @@
     In Situ Drilling\\
     \vspace{2pt}
     {\normalfont\scriptsize\color{green!60!black}
-    • Direct Measurement\\
+    • Direct measurement\\
     • Material sampling\\
     • Depth profiling\\
     \vspace{3pt}
@@ -67,8 +67,8 @@
     \vspace{4pt}
     \color{red!70!black}
     • Model-dependent results\\
-    • Shallow penetration\\
-    • Environmental interference}
+    • Limited spatial resolution\\
+    • Sources of interference}
 };
 
 % Red wavy arrows emitted from surface upwards (thermal radiation)
