--- a/fly_me_to_the_moon.tex
+++ b/fly_me_to_the_moon.tex
@@ -1,4 +1,4 @@
-\documentclass[tikz]{standalone}
+\documentclass[tikz, border=5pt]{standalone}
 \usepackage{tikz}
 \usetikzlibrary{calc,positioning,intersections,shadows.blur,decorations.pathmorphing,patterns,shapes.callouts}
 
