--- a/regolith_forming.tex
+++ b/regolith_forming.tex
@@ -90,7 +90,7 @@
     
     % Dimension line
     \draw[<->] (3.2,1) -- (3.2,2);
-    \node[rotate=90] at (3.5,1.5) {$\sim$\SI{1}{\meter}};
+    \node[rotate=90] at (3.5,1.5) {$\sim$\si{\meter}};
     
     % Label
     \node at (1.5,-0.5) {\textbf{Present Day}};
